--- a/api/.htaccess
+++ b/api/.htaccess
@@ -6,6 +6,6 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} (.*/api)
 
-RewriteRule ^(.*)$ %1/http.php/$1 [L]
+RewriteRule ^(.*)$ %1/http.php [L,E=PATH_INFO:$1]
 
 </IfModule>
